<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="asteroid"
            type="com.udacity.asteroidradar.models.Asteroid" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/app_background">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.3" />

        <ImageView
            android:id="@+id/activity_main_image_of_the_day"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/description_not_hazardous_asteroid_image"
            android:scaleType="centerCrop"
            app:asteroidStatusImage="@{asteroid.potentiallyHazardous}"
            app:layout_constraintBottom_toTopOf="@+id/guideline"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            tools:srcCompat="@drawable/asteroid_hazardous" />

        <ScrollView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:padding="@dimen/default_spacing"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/activity_main_image_of_the_day">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        style="@style/ItemTextStyle"
                        android:text="@string/close_approach_data_title" />

                    <TextView
                        android:id="@+id/close_approach_date"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/item_top_margin"
                        android:text="@{asteroid.closeApproachDate}"
                        android:textColor="@color/default_text_color"
                        tools:text="2020-02-01" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/default_spacing"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            style="@style/ItemTextStyle"
                            android:text="@string/absolute_magnitude_title" />

                        <TextView
                            style="@style/ItemTextStyle"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/item_top_margin"
                            app:astronomicalUnitText="@{asteroid.absoluteMagnitude}"
                            tools:text="25.126 au" />
                    </LinearLayout>

                    <ImageView
                        android:id="@+id/help_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/description_help_button"
                        android:padding="@dimen/default_spacing"
                        app:srcCompat="@drawable/ic_help_circle" />

                </LinearLayout>

                <TextView
                    style="@style/ItemTextStyle"
                    android:layout_marginTop="@dimen/default_spacing"
                    android:text="@string/estimated_diameter_title" />

                <TextView
                    android:id="@+id/estimated_diameter"
                    style="@style/ItemTextStyle"
                    android:layout_marginTop="@dimen/item_top_margin"
                    app:kmUnitText="@{asteroid.estimatedDiameter}"
                    tools:text="0.82 km" />

                <TextView
                    style="@style/ItemTextStyle"
                    android:layout_marginTop="@dimen/default_spacing"
                    android:text="@string/relative_velocity_title" />

                <TextView
                    android:id="@+id/relative_velocity"
                    style="@style/ItemTextStyle"
                    android:layout_marginTop="@dimen/item_top_margin"
                    app:velocityText="@{asteroid.relativeVelocity}"
                    tools:text="11.9 km/s" />

                <TextView
                    style="@style/ItemTextStyle"
                    android:layout_marginTop="@dimen/default_spacing"
                    android:text="@string/distance_from_earth_title" />

                <TextView
                    android:id="@+id/distance_from_earth"
                    style="@style/ItemTextStyle"
                    android:layout_marginTop="@dimen/item_top_margin"
                    app:astronomicalUnitText="@{asteroid.distanceFromEarth}"
                    tools:text="0.0924 au" />

            </LinearLayout>
        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>